# sfml-practice

./: .clang-format  CMakeLists.txt  README.md  main.cpp
cmake/: Utils.cmake
minesweeper/: CMakeLists.txt  Main.cpp  Minesweeper.cpp  Minesweeper.h  main.cpp  minesweeper.cpp  minesweeper.h
